fix button text not centered in safari

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -30,7 +30,6 @@ page-home {
             justify-content: center;
             margin-bottom: 20px;
             cursor:pointer;
-            padding: 4vh 5%;
             font-size: 3vh;
             border-radius: 20px;
         }
